--- a/style.css
+++ b/style.css
@@ -2,5 +2,10 @@
 .carousel-height{
     height: 70vh;
     object-fit: cover;
-    } 
+}
+/* for card images */
+.card-width{
+    width: 100vw;
+}
+
     
